--- a/HLP.fsproj
+++ b/HLP.fsproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="session3/04_pastpaper.fs" />
+    <Compile Include="session3/03_B.fs" />
     <Compile Include="session2/06_E.fs" />
     <Compile Include="session2/05_D.fs" />
     <Compile Include="session2/04_C.fs" />
